Attempt 3 at fixing address bar layout bug.

--- a/style.css
+++ b/style.css
@@ -15,11 +15,13 @@ html {
     scrollbar-width: none;  /* Firefox */  
     color: hsl(35, 100%, 90%);
     scroll-behavior: smooth;
-    height: 100%;
+    min-height: -webkit-fill-available;
 }
 
 body {
-  height: 100%;
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  min-height: -webkit-fill-available;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
